Fixed alignment issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -58,7 +58,7 @@ p {
 	background-color: #f5f5f5;
 	padding-top:20px;
 	opacity: 0.95;
-	margin-left:10%;
+	margin-left:13%;
 	padding-bottom:20px;
 }
 
@@ -66,12 +66,11 @@ p {
 	display: block;	
 	background-image: url('../images/pageBackground.png');
 	background-repeat: no-repeat;
-	padding-left: 80px;
 	background-size:100%;
 }
 
 .content-top #intro-background {
-
+	opacity: 0.95;
 }
 
 .content-top #intro-text {
